--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,3 +4,12 @@
 body {
 	font-family: 'Museo Sans', sans-serif;
 }
+.container {
+	max-width: 950px; 
+	margin: 0 auto; /* выровнять по центру контейнер */
+}
+
+@import "blocks/promo";
+@import "blocks/header";
+@import "blocks/buttons";
+
