--- a/sass/blocks/_promo.scss
+++ b/sass/blocks/_promo.scss
@@ -1,5 +1,59 @@
 .promo {
-    min-height: 650px;
-    padding: 21px 0 93px 0;
-    background: url(../../img/bg/bg_run.jpg) center (center/cover) no-repeat;
-}
+	min-height: 650px;
+	padding: 21px 0 93px 0;
+	background: url(../../img/bg/bg_run.jpg) center (center/cover) no-repeat;
+	&__wrapper {
+		display: flex;
+		flex-direction: column;
+		align-items: flex-end;
+		margin-top: 90px;
+	}
+	&__header {
+		font-size: 42px;
+		font-weight: 700;
+		text-transform: uppercase;
+		color: #ffffff;
+		line-height: 42px;
+	}
+	&__subheader {
+		font-size: 24px;
+		font-weight: 500;
+		text-transform: uppercase;
+		color: #ffffff;
+		margin-top: 17px;
+		line-height: 24px;
+	}
+	&__icons {
+		margin-top: 66px;
+		display: flex;
+		justify-content: space-between;
+		width: 428px;
+	}
+	&__icon {
+		font-size: 14px;
+		line-height: 17px;
+		font-weight: 500;
+		color: #ffffff;
+		width: 108px;
+		text-align: center;
+		img {
+			display: block;
+			margin: 0 auto;
+			margin-bottom: 20px;
+		}
+	}
+	&__link {
+		margin-top: 18px;
+		font-size: 16px;
+		font-weight: 500;
+		color: #ffffff;
+		a {
+			text-decoration: underline;
+			text-transform: uppercase;
+			color:#ffffff;
+			&:hover {
+				color: #fff;
+			}
+		}
+	}
+} 
