--- a/sass/blocks/_media.scss
+++ b/sass/blocks/_media.scss
@@ -2,6 +2,9 @@
 	.container {
 		max-width: 890px;
 	}
+	.promo {
+		background-position: 30%;
+	}
 }
 
 
@@ -10,7 +13,6 @@
 		max-width: 700px;
 	}
 	.promo {
-		padding-bottom: 60px;
 		&__icons {
 			margin-top: 55px;
 		}
@@ -84,6 +86,7 @@
 		}
 	}
 	.promo {
+		background-position: 5%;
 		padding-bottom: 60px;
 		&__wrapper {
 			margin-top: 60px;
