--- a/sass/blocks/_media.scss
+++ b/sass/blocks/_media.scss
@@ -20,6 +20,11 @@
 			align-items: center;
 		}
 	}
+	.advantages {
+		&__item {
+			width: 215px;
+		}
+	}
 }
 
 
@@ -58,6 +63,23 @@
 		}
 		&__icons {
 			width: 400px;
+		}
+	}
+	.advantages {
+		&__wrapper {
+			flex-direction: column;
+			align-items: center;
+			margin-top: 20px;
+		}
+		&__item {
+			width: 300px;
+			margin-top: 38px;
+		}
+		&__header {
+			margin-top: 15px;
+		}
+		&__descr {
+			margin-top: 20px;
 		}
 	}
 }
@@ -100,5 +122,14 @@
 			width: 250px;
 		}
 	}
-
+	.header_repeat {
+		font-size: 26px;
+	}
+	.advantages {
+		padding-top: 50px;
+		&__item {
+			width: 260px;
+			margin-top: 38px;
+		}
+	}
 }
