--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,5 +12,7 @@
 @import "blocks/promo";
 @import "blocks/header";
 @import "blocks/buttons";
+@import "blocks/advantages";
+@import "blocks/header_repeat";
 
 @import "blocks/media"
