Add section .consultation with a form

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,5 +14,7 @@
 @import "blocks/buttons";
 @import "blocks/advantages";
 @import "blocks/header_repeat";
+@import "blocks/consultation";
+@import "blocks/forms";
 
 @import "blocks/media"
