--- a/sass/blocks/_advantages.scss
+++ b/sass/blocks/_advantages.scss
@@ -1,6 +1,7 @@
 .advantages {
 	min-height: 470px;
 	padding: 69px 0 78px 0;
+	background-color: #f6f6f6;
 	&__wrapper {
 		display: flex;
 		justify-content: space-between;
