Add .carousel and js files

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -16,5 +16,6 @@
 @import "blocks/header_repeat";
 @import "blocks/consultation";
 @import "blocks/forms";
+@import "blocks/carousel";
 
 @import "blocks/media"
