--- a/sass/blocks/_media.scss
+++ b/sass/blocks/_media.scss
@@ -60,8 +60,6 @@
 	
 		&__icons {
 			margin-top: 50px;
-		}
-		&__icons {
 			width: 400px;
 		}
 	}
@@ -81,6 +79,15 @@
 		&__descr {
 			margin-top: 20px;
 		}
+	}
+	.consultation {
+		&__descr {
+			margin-top: 65px;
+		}
+	}
+	.feed-form {
+		margin: 0 auto;
+		margin-top: 50px;
 	}
 }
 
@@ -129,8 +136,8 @@
 	}
 	.consultation {
 		padding-top: 70px;
-		&__descr {
-			margin-top: 65px;
-		}
+	}
+	.feed-form {
+		width: 250px;
 	}
 }
