Add section .catalog

--- a/sass/blocks/_media.scss
+++ b/sass/blocks/_media.scss
@@ -5,6 +5,14 @@
 	.promo {
 		background-position: 30%;
 	}
+	.carousel {
+		&__inner {
+			width: 30%;
+			img {
+				width: 100%;
+			}
+		}
+	}
 }
 
 
