--- a/sass/blocks/_buttons.scss
+++ b/sass/blocks/_buttons.scss
@@ -1,7 +1,7 @@
 .button {
 	width: 150px;
 	height: 30px;
-	background-color: $main-colour;
+	background-color: $main-color;
 	border-radius: 5px;
 	border: none;
 	font-size: 12px;
@@ -18,5 +18,10 @@
 		width: 100%;
 		height: 55px;
 		font-size: 16px;
+	}
+	&_mini {
+		width: 131px;
+		height: 40px;
+		font-size: 14px;
 	}
 }
