--- a/sass/blocks/_catalog.scss
+++ b/sass/blocks/_catalog.scss
@@ -24,7 +24,7 @@
 		cursor: pointer;
 		transition: 0.5s all;
 		&:hover {
-			box-shadow: 3px 3px 20px $main-color;
+			box-shadow: 3px 3px 20px $main-color; /* при наведении курсора подсвечивается таб */
 			border: none;
 		}
 
@@ -51,7 +51,7 @@
 		min-height: 440px;
 		border: 2px solid #e8e8e8;
 		padding: 20px 20px 26px;
-		overflow: hidden;
+		overflow: hidden; /* изначально скрытый класс */
 		margin-bottom: 20px;
 		&__img {
 			display: block;
@@ -124,31 +124,31 @@
 		}
 		&__wrapper {
 			display: flex;
-			width: calc(200% + 40px);
+			width: calc(200% + 40px); /* ширина двух обёрток + их margin */
 		}
 		&__content {
-			width: 50%;
-			margin-right: 0px;
-			transform: translateX(-100%);
+			width: 50%; /* половина ширины от .wrapper */
+			margin-right: 0px; /* убираем 20 рх, когда элемент не активен */
+			transform: translateX(-100%); /* когда элемент не активен, то он двигается */
 			transition: 0.5s all;
 			&_active {
-				transform: translateX(0%);
-				margin-right: 20px;
+				transform: translateX(0%); /* когда элемент активен, то он стоит на месте */
+				margin-right: 20px; /* изначально активный класс будет иметь 20 px */
 			}
 		}
 		&__list {
 			position: relative;
-			width: 50%;
-			margin-left: 20px;
-			transform: translateX(0%);
-			transition: 0.5s all;
-			padding-right: 20px;
-			padding-left: 19px;
-			margin-bottom: 0;
+			width: 50%; /* половина ширины от .wrapper */
+			margin-left: 20px; 
+			transform: translateX(0%); /* когда элемент активен, то он двигается */
+			transition: 0.5s all; /* плавная анимация */
+			padding-right: 20px; /* чтобы можно было выровнять контент */
+			padding-left: 19px; /* 14px до квадратика и 5px сам квадратик */
+			margin-bottom: 0; /* выключаем стандартные стили ul */
 			list-style-type: none;
 			&_active {
-				transform: translateX(-100%);
-				margin-left: 0px;
+				transform: translateX(-100%); /* когда элемент не активен, то он стоит на месте */
+				margin-left: 0px; /* как в верхнем классе, только наоборот */
 			}
 			li {
 				position: relative;
@@ -158,12 +158,12 @@
 				color: #555555;
 				margin-bottom: 20px;
 				&:before {
-					content: '';
+					content: ''; /* всегда устанавливается в псевдоэлементах */
 					position: absolute;
 					width: 5px;
 					height: 5px;
 					background-color: $main-color;
-					left: -14px;
+					left: -14px; /* сдвигаются квадратики */
 					top: 8px;
 				}
 			}
