--- a/sass/blocks/_media.scss
+++ b/sass/blocks/_media.scss
@@ -6,10 +6,11 @@
 		background-position: 30%;
 	}
 	.carousel {
+		width: 80%;
+		margin: 0 auto;
 		&__inner {
-			width: 30%;
 			img {
-				width: 100%;
+				width: 90%;
 			}
 		}
 	}
@@ -31,6 +32,19 @@
 	.advantages {
 		&__item {
 			width: 215px;
+		}
+	}
+	.carousel {
+		.prev, .next {
+			left: -50px;
+			img {
+				width: 90%;
+				height: 90%;
+			}
+		}
+		.next {
+			right: -50px;
+			left: auto;
 		}
 	}
 }
@@ -97,6 +111,30 @@
 		margin: 0 auto;
 		margin-top: 50px;
 	}
+	.carousel {
+		.prev, .next {
+			display: none;
+		}
+		padding-bottom: 150px;
+		width: 90%;
+		margin: 0 auto;
+		&__inner {
+			img {
+				width: 100%;
+			}
+		}
+	}
+	.tns-nav {
+		bottom: -15%;
+	}
+	.catalog {
+		&__tabs {
+			margin-top: 50px;
+		}
+		&__tab {
+			font-size: 15px;
+		}
+	}
 }
 
 
@@ -147,5 +185,16 @@
 	}
 	.feed-form {
 		width: 250px;
+	}
+	.tns-nav {
+		bottom: -30%;
+	}
+	.catalog {
+		&__tabs {
+			flex-wrap: wrap;
+		}
+		&__tab {
+			margin-top: 5px;
+		}
 	}
 }
