--- a/sass/blocks/_modal.scss
+++ b/sass/blocks/_modal.scss
@@ -44,6 +44,15 @@
 		min-height: 140px;
 		padding: 38px 75px 40px;
 	}
+	.error {
+		border: 1px solid red;
+	}
+	label.error {
+		border: none;
+		margin-bottom: 15px;
+		text-align: center;
+		font-size: 15px;
+	}
 }
 
 #consultation, #order, #thanks { /* изначально модальные окна скрытые */
