--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,7 +8,6 @@
 }
 
 @import "base/variables";
-@import "base/mixins";
 @import "blocks/promo";
 @import "blocks/header";
 @import "blocks/buttons";
@@ -21,5 +20,6 @@
 @import "blocks/review";
 @import "blocks/footer";
 @import "blocks/modal";
+@import "blocks/pageup";
 
 @import "blocks/media"
