--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,6 @@
+@import "base/variables";
+@import "base/animations";
+
 * {
 	font-family: 'Museo Sans', sans-serif;
 }
@@ -7,7 +10,6 @@
 	position: relative;
 }
 
-@import "base/variables";
 @import "blocks/promo";
 @import "blocks/header";
 @import "blocks/buttons";
