Optimization, update gulp

--- a/sass/libs/_fonts.scss
+++ b/sass/libs/_fonts.scss
@@ -1,5 +1,7 @@
+
 @font-face {
 	font-family: 'Museo Sans Cyrl';
+	font-display: swap; /* для оптимизации сайта, чтобы по умолчанию подключался сразу этот шрифт */
 	src: url('../fonts/MuseoSansCyrl-300.eot');
 	src: url('../fonts/MuseoSansCyrl-300.eot?#iefix') format('embedded-opentype'),
 	url('../fonts/MuseoSansCyrl-300.woff') format('woff'),
@@ -9,6 +11,7 @@
 	}
 @font-face {
 	font-family: 'Museo Sans Cyrl';
+	font-display: swap;
 	src: url('../fonts/MuseoSansCyrl-500.eot');
 	src: url('../fonts/MuseoSansCyrl-500.eot?#iefix') format('embedded-opentype'),
 	url('../fonts/MuseoSansCyrl-500.woff') format('woff'),
@@ -18,6 +21,7 @@
 	}
 @font-face {
 	font-family: 'Museo Sans Cyrl';
+	font-display: swap;
 	src: url('../fonts/MuseoSansCyrl-700.eot');
 	src: url('../fonts/MuseoSansCyrl-700.eot?#iefix') format('embedded-opentype'),
 	url('../fonts/MuseoSansCyrl-700.woff') format('woff'),
